--- a/advanced javascript/index.html
+++ b/advanced javascript/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Advaced Javascript</title>
+    <script src="script.js"></script>
 </head>
 <body>
     
 </body>
 </html>
+
+#write  a program of 2 numbers
